// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfilingCache should calculate a self duration based on actual children (not filtered children): CommitDetails with filtered self durations 1`] = `
OBJECT {
  "changeDescriptions": Map {
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    6 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 16,
  "effectDuration": null,
  "fiberActualDurations": Map {
    1 => 16,
    2 => 16,
    4 => 1,
    6 => 1,
  },
  "fiberSelfDurations": Map {
    1 => 0,
    2 => 10,
    4 => 1,
    6 => 1,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 16,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should calculate self duration correctly for suspended views: CommitDetails with filtered self durations 1`] = `
OBJECT {
  "changeDescriptions": Map {
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 15,
  "effectDuration": 0,
  "fiberActualDurations": Map {
    1 => 15,
    2 => 15,
    3 => 5,
    4 => 2,
  },
  "fiberSelfDurations": Map {
    1 => 0,
    2 => 10,
    3 => 3,
    4 => 2,
  },
  "passiveEffectDuration": 0,
  "priorityLevel": "Immediate",
  "timestamp": 15,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should calculate self duration correctly for suspended views: CommitDetails with filtered self durations 2`] = `
OBJECT {
  "changeDescriptions": Map {
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 3,
  "effectDuration": 0,
  "fiberActualDurations": Map {
    7 => 3,
    3 => 3,
  },
  "fiberSelfDurations": Map {
    7 => 3,
    3 => 0,
  },
  "passiveEffectDuration": 0,
  "priorityLevel": "Immediate",
  "timestamp": 18,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should collect data for each commit: CommitDetails commitIndex: 0 1`] = `
OBJECT {
  "changeDescriptions": Map {
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    6 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 12,
  "effectDuration": null,
  "fiberActualDurations": Map {
    1 => 12,
    2 => 12,
    4 => 0,
    5 => 1,
    6 => 1,
  },
  "fiberSelfDurations": Map {
    1 => 0,
    2 => 10,
    4 => 0,
    5 => 1,
    6 => 1,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 12,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should collect data for each commit: CommitDetails commitIndex: 1 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
  },
  "duration": 13,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
    5 => 1,
    7 => 2,
    2 => 13,
    1 => 13,
  },
  "fiberSelfDurations": Map {
    4 => 0,
    5 => 1,
    7 => 2,
    2 => 10,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 25,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should collect data for each commit: CommitDetails commitIndex: 2 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
  },
  "duration": 10,
  "effectDuration": 0,
  "fiberActualDurations": Map {
    4 => 0,
    2 => 10,
    1 => 10,
  },
  "fiberSelfDurations": Map {
    4 => 0,
    2 => 10,
    1 => 0,
  },
  "passiveEffectDuration": 0,
  "priorityLevel": "Immediate",
  "timestamp": 35,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should collect data for each commit: CommitDetails commitIndex: 3 1`] = `
OBJECT {
  "changeDescriptions": Map {
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
  },
  "duration": 10,
  "effectDuration": 0,
  "fiberActualDurations": Map {
    2 => 10,
    1 => 10,
  },
  "fiberSelfDurations": Map {
    2 => 10,
    1 => 0,
  },
  "passiveEffectDuration": 0,
  "priorityLevel": "Immediate",
  "timestamp": 45,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should collect data for each commit: imported data 1`] = `
OBJECT {
  "dataForRoots": ARRAY [
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
          ],
          "duration": 12,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              1,
              12,
            ],
            ARRAY [
              2,
              12,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              6,
              1,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              6,
              1,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 12,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 13,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              7,
              2,
            ],
            ARRAY [
              2,
              13,
            ],
            ARRAY [
              1,
              13,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              7,
              2,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 25,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 10,
          "effectDuration": 0,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              10,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": 0,
          "priorityLevel": "Immediate",
          "timestamp": 35,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 10,
          "effectDuration": 0,
          "fiberActualDurations": ARRAY [
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              10,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": 0,
          "priorityLevel": "Immediate",
          "timestamp": 45,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "Parent",
      "initialTreeBaseDurations": ARRAY [],
      "operations": ARRAY [
        ARRAY [
          1,
          1,
          17,
          6,
          80,
          97,
          114,
          101,
          110,
          116,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          48,
          1,
          49,
          1,
          1,
          11,
          0,
          1,
          1,
          1,
          4,
          1,
          12000,
          1,
          2,
          5,
          1,
          0,
          1,
          0,
          4,
          2,
          12000,
          1,
          4,
          5,
          2,
          2,
          2,
          3,
          4,
          4,
          0,
          1,
          5,
          5,
          2,
          2,
          2,
          4,
          4,
          5,
          1000,
          1,
          6,
          8,
          2,
          2,
          2,
          0,
          4,
          6,
          1000,
        ],
        ARRAY [
          1,
          1,
          8,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          50,
          1,
          7,
          5,
          2,
          2,
          1,
          2,
          4,
          7,
          2000,
          4,
          2,
          14000,
          3,
          2,
          4,
          4,
          5,
          7,
          6,
          4,
          1,
          14000,
        ],
        ARRAY [
          1,
          1,
          0,
          2,
          2,
          7,
          5,
          4,
          2,
          11000,
          3,
          2,
          2,
          4,
          6,
          4,
          1,
          11000,
        ],
        ARRAY [
          1,
          1,
          0,
          2,
          1,
          4,
        ],
      ],
      "rootID": 1,
      "snapshots": ARRAY [],
    },
  ],
  "version": 5,
}
`;

exports[`ProfilingCache should collect data for each rendered fiber: FiberCommits: element 2 1`] = `
ARRAY [
  0,
  1,
  2,
]
`;

exports[`ProfilingCache should collect data for each rendered fiber: FiberCommits: element 4 1`] = `
ARRAY [
  0,
  1,
  2,
]
`;

exports[`ProfilingCache should collect data for each rendered fiber: FiberCommits: element 5 1`] = `
ARRAY [
  0,
]
`;

exports[`ProfilingCache should collect data for each rendered fiber: FiberCommits: element 6 1`] = `
ARRAY [
  1,
  2,
]
`;

exports[`ProfilingCache should collect data for each rendered fiber: FiberCommits: element 7 1`] = `
ARRAY [
  2,
]
`;

exports[`ProfilingCache should collect data for each rendered fiber: imported data 1`] = `
OBJECT {
  "dataForRoots": ARRAY [
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
          ],
          "duration": 11,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              1,
              11,
            ],
            ARRAY [
              2,
              11,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 11,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 11,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              6,
              1,
            ],
            ARRAY [
              2,
              11,
            ],
            ARRAY [
              1,
              11,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              6,
              1,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 22,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 13,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              6,
              1,
            ],
            ARRAY [
              7,
              2,
            ],
            ARRAY [
              2,
              13,
            ],
            ARRAY [
              1,
              13,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              6,
              1,
            ],
            ARRAY [
              7,
              2,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 35,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "Parent",
      "initialTreeBaseDurations": ARRAY [],
      "operations": ARRAY [
        ARRAY [
          1,
          1,
          15,
          6,
          80,
          97,
          114,
          101,
          110,
          116,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          48,
          1,
          1,
          11,
          0,
          1,
          1,
          1,
          4,
          1,
          11000,
          1,
          2,
          5,
          1,
          0,
          1,
          0,
          4,
          2,
          11000,
          1,
          4,
          5,
          2,
          2,
          2,
          3,
          4,
          4,
          0,
          1,
          5,
          8,
          2,
          2,
          2,
          0,
          4,
          5,
          1000,
        ],
        ARRAY [
          1,
          1,
          8,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          49,
          1,
          6,
          5,
          2,
          2,
          1,
          2,
          4,
          6,
          1000,
          4,
          2,
          12000,
          3,
          2,
          3,
          4,
          6,
          5,
          4,
          1,
          12000,
        ],
        ARRAY [
          1,
          1,
          8,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          50,
          1,
          7,
          5,
          2,
          2,
          1,
          2,
          4,
          7,
          2000,
          4,
          2,
          14000,
          3,
          2,
          4,
          4,
          6,
          7,
          5,
          4,
          1,
          14000,
        ],
      ],
      "rootID": 1,
      "snapshots": ARRAY [],
    },
  ],
  "version": 5,
}
`;

exports[`ProfilingCache should collect data for each root (including ones added or mounted after profiling started): Data for root Parent 1`] = `
OBJECT {
  "commitData": ARRAY [
    OBJECT {
      "changeDescriptions": Map {
        4 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [],
          "state": null,
        },
        5 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [],
          "state": null,
        },
        12 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "isFirstMount": true,
          "props": null,
          "state": null,
        },
        2 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [
            "count",
          ],
          "state": null,
        },
      },
      "duration": 13,
      "effectDuration": null,
      "fiberActualDurations": Map {
        4 => 0,
        5 => 1,
        12 => 2,
        2 => 13,
        1 => 13,
      },
      "fiberSelfDurations": Map {
        4 => 0,
        5 => 1,
        12 => 2,
        2 => 10,
        1 => 0,
      },
      "passiveEffectDuration": null,
      "priorityLevel": "Immediate",
      "timestamp": 13,
      "updaters": ARRAY [
        OBJECT {
          "displayName": "render()",
          "hocDisplayNames": null,
          "id": 1,
          "key": null,
          "identifierDescription": 11,
        },
      ],
    },
    OBJECT {
      "changeDescriptions": Map {
        4 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [],
          "state": null,
        },
        2 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [
            "count",
          ],
          "state": null,
        },
      },
      "duration": 10,
      "effectDuration": 0,
      "fiberActualDurations": Map {
        4 => 0,
        2 => 10,
        1 => 10,
      },
      "fiberSelfDurations": Map {
        4 => 0,
        2 => 10,
        1 => 0,
      },
      "passiveEffectDuration": 0,
      "priorityLevel": "Immediate",
      "timestamp": 34,
      "updaters": ARRAY [
        OBJECT {
          "displayName": "render()",
          "hocDisplayNames": null,
          "id": 1,
          "key": null,
          "identifierDescription": 11,
        },
      ],
    },
    OBJECT {
      "changeDescriptions": Map {
        2 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "hooks": null,
          "isFirstMount": false,
          "props": ARRAY [
            "count",
          ],
          "state": null,
        },
      },
      "duration": 10,
      "effectDuration": 0,
      "fiberActualDurations": Map {
        2 => 10,
        1 => 10,
      },
      "fiberSelfDurations": Map {
        2 => 10,
        1 => 0,
      },
      "passiveEffectDuration": 0,
      "priorityLevel": "Immediate",
      "timestamp": 44,
      "updaters": ARRAY [
        OBJECT {
          "displayName": "render()",
          "hocDisplayNames": null,
          "id": 1,
          "key": null,
          "identifierDescription": 11,
        },
      ],
    },
  ],
  "displayName": "Parent",
  "initialTreeBaseDurations": Map {
    1 => 12,
    2 => 12,
    4 => 0,
    5 => 1,
    6 => 1,
  },
  "operations": ARRAY [
    ARRAY [
      1,
      1,
      8,
      5,
      67,
      104,
      105,
      108,
      100,
      1,
      50,
      1,
      12,
      5,
      2,
      2,
      1,
      2,
      4,
      12,
      2000,
      4,
      2,
      14000,
      3,
      2,
      4,
      4,
      5,
      12,
      6,
      4,
      1,
      14000,
    ],
    ARRAY [
      1,
      1,
      0,
      2,
      2,
      12,
      5,
      4,
      2,
      11000,
      3,
      2,
      2,
      4,
      6,
      4,
      1,
      11000,
    ],
    ARRAY [
      1,
      1,
      0,
      2,
      1,
      4,
    ],
  ],
  "rootID": 1,
  "snapshots": Map {
    1 => OBJECT {
      "children": ARRAY [
        2,
      ],
      "displayName": null,
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
    2 => OBJECT {
      "children": ARRAY [
        4,
        5,
        6,
      ],
      "displayName": "Parent",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "identifierDescription": 5,
    },
    4 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 4,
      "key": "0",
      "identifierDescription": 5,
    },
    5 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": null,
      "id": 5,
      "key": "1",
      "identifierDescription": 5,
    },
    6 => OBJECT {
      "children": ARRAY [],
      "displayName": "Child",
      "hocDisplayNames": ARRAY [
        "Memo",
      ],
      "id": 6,
      "key": null,
      "identifierDescription": 8,
    },
  },
}
`;

exports[`ProfilingCache should collect data for each root (including ones added or mounted after profiling started): Data for root Parent 2`] = `
OBJECT {
  "commitData": ARRAY [
    OBJECT {
      "changeDescriptions": Map {
        14 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "isFirstMount": true,
          "props": null,
          "state": null,
        },
        16 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "isFirstMount": true,
          "props": null,
          "state": null,
        },
        17 => OBJECT {
          "context": null,
          "didHooksChange": false,
          "isFirstMount": true,
          "props": null,
          "state": null,
        },
      },
      "duration": 11,
      "effectDuration": null,
      "fiberActualDurations": Map {
        13 => 11,
        14 => 11,
        16 => 0,
        17 => 1,
      },
      "fiberSelfDurations": Map {
        13 => 0,
        14 => 10,
        16 => 0,
        17 => 1,
      },
      "passiveEffectDuration": null,
      "priorityLevel": "Immediate",
      "timestamp": 24,
      "updaters": ARRAY [
        OBJECT {
          "displayName": "render()",
          "hocDisplayNames": null,
          "id": 13,
          "key": null,
          "identifierDescription": 11,
        },
      ],
    },
  ],
  "displayName": "Parent",
  "initialTreeBaseDurations": Map {},
  "operations": ARRAY [
    ARRAY [
      1,
      13,
      15,
      6,
      80,
      97,
      114,
      101,
      110,
      116,
      5,
      67,
      104,
      105,
      108,
      100,
      1,
      48,
      1,
      13,
      11,
      0,
      1,
      1,
      1,
      4,
      13,
      11000,
      1,
      14,
      5,
      13,
      0,
      1,
      0,
      4,
      14,
      11000,
      1,
      16,
      5,
      14,
      14,
      2,
      3,
      4,
      16,
      0,
      1,
      17,
      8,
      14,
      14,
      2,
      0,
      4,
      17,
      1000,
    ],
  ],
  "rootID": 13,
  "snapshots": Map {},
}
`;

exports[`ProfilingCache should collect data for each root (including ones added or mounted after profiling started): imported data 1`] = `
OBJECT {
  "dataForRoots": ARRAY [
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              12,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 13,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              12,
              2,
            ],
            ARRAY [
              2,
              13,
            ],
            ARRAY [
              1,
              13,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              1,
            ],
            ARRAY [
              12,
              2,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 13,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 10,
          "effectDuration": 0,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              10,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": 0,
          "priorityLevel": "Immediate",
          "timestamp": 34,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 10,
          "effectDuration": 0,
          "fiberActualDurations": ARRAY [
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              10,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              2,
              10,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": 0,
          "priorityLevel": "Immediate",
          "timestamp": 44,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "Parent",
      "initialTreeBaseDurations": ARRAY [
        ARRAY [
          1,
          12,
        ],
        ARRAY [
          2,
          12,
        ],
        ARRAY [
          4,
          0,
        ],
        ARRAY [
          5,
          1,
        ],
        ARRAY [
          6,
          1,
        ],
      ],
      "operations": ARRAY [
        ARRAY [
          1,
          1,
          8,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          50,
          1,
          12,
          5,
          2,
          2,
          1,
          2,
          4,
          12,
          2000,
          4,
          2,
          14000,
          3,
          2,
          4,
          4,
          5,
          12,
          6,
          4,
          1,
          14000,
        ],
        ARRAY [
          1,
          1,
          0,
          2,
          2,
          12,
          5,
          4,
          2,
          11000,
          3,
          2,
          2,
          4,
          6,
          4,
          1,
          11000,
        ],
        ARRAY [
          1,
          1,
          0,
          2,
          1,
          4,
        ],
      ],
      "rootID": 1,
      "snapshots": ARRAY [
        ARRAY [
          1,
          OBJECT {
            "children": ARRAY [
              2,
            ],
            "displayName": null,
            "hocDisplayNames": null,
            "id": 1,
            "key": null,
            "identifierDescription": 11,
          },
        ],
        ARRAY [
          2,
          OBJECT {
            "children": ARRAY [
              4,
              5,
              6,
            ],
            "displayName": "Parent",
            "hocDisplayNames": null,
            "id": 2,
            "key": null,
            "identifierDescription": 5,
          },
        ],
        ARRAY [
          4,
          OBJECT {
            "children": ARRAY [],
            "displayName": "Child",
            "hocDisplayNames": null,
            "id": 4,
            "key": "0",
            "identifierDescription": 5,
          },
        ],
        ARRAY [
          5,
          OBJECT {
            "children": ARRAY [],
            "displayName": "Child",
            "hocDisplayNames": null,
            "id": 5,
            "key": "1",
            "identifierDescription": 5,
          },
        ],
        ARRAY [
          6,
          OBJECT {
            "children": ARRAY [],
            "displayName": "Child",
            "hocDisplayNames": ARRAY [
              "Memo",
            ],
            "id": 6,
            "key": null,
            "identifierDescription": 8,
          },
        ],
      ],
    },
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              14,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              16,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              17,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
          ],
          "duration": 11,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              13,
              11,
            ],
            ARRAY [
              14,
              11,
            ],
            ARRAY [
              16,
              0,
            ],
            ARRAY [
              17,
              1,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              13,
              0,
            ],
            ARRAY [
              14,
              10,
            ],
            ARRAY [
              16,
              0,
            ],
            ARRAY [
              17,
              1,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 24,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 13,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "Parent",
      "initialTreeBaseDurations": ARRAY [],
      "operations": ARRAY [
        ARRAY [
          1,
          13,
          15,
          6,
          80,
          97,
          114,
          101,
          110,
          116,
          5,
          67,
          104,
          105,
          108,
          100,
          1,
          48,
          1,
          13,
          11,
          0,
          1,
          1,
          1,
          4,
          13,
          11000,
          1,
          14,
          5,
          13,
          0,
          1,
          0,
          4,
          14,
          11000,
          1,
          16,
          5,
          14,
          14,
          2,
          3,
          4,
          16,
          0,
          1,
          17,
          8,
          14,
          14,
          2,
          0,
          4,
          17,
          1000,
        ],
      ],
      "rootID": 13,
      "snapshots": ARRAY [],
    },
  ],
  "version": 5,
}
`;

exports[`ProfilingCache should handle unexpectedly shallow suspense trees: Empty Suspense node 1`] = `
OBJECT {
  "commitData": ARRAY [
    OBJECT {
      "changeDescriptions": Map {},
      "duration": 0,
      "effectDuration": null,
      "fiberActualDurations": Map {
        1 => 0,
        2 => 0,
      },
      "fiberSelfDurations": Map {
        1 => 0,
        2 => 0,
      },
      "passiveEffectDuration": null,
      "priorityLevel": "Immediate",
      "timestamp": 0,
      "updaters": ARRAY [
        OBJECT {
          "displayName": "render()",
          "hocDisplayNames": null,
          "id": 1,
          "key": null,
          "identifierDescription": 11,
        },
      ],
    },
  ],
  "displayName": "Suspense",
  "initialTreeBaseDurations": Map {},
  "operations": ARRAY [
    ARRAY [
      1,
      1,
      9,
      8,
      83,
      117,
      115,
      112,
      101,
      110,
      115,
      101,
      1,
      1,
      11,
      0,
      1,
      1,
      1,
      1,
      2,
      12,
      1,
      0,
      1,
      0,
      4,
      2,
      0,
    ],
  ],
  "rootID": 1,
  "snapshots": Map {},
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 0 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": 0,
  "fiberActualDurations": Map {
    1 => 0,
    2 => 0,
    3 => 0,
    4 => 0,
  },
  "fiberSelfDurations": Map {
    1 => 0,
    2 => 0,
    3 => 0,
    4 => 0,
  },
  "passiveEffectDuration": 0,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 1 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": false,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 2 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": false,
      "didHooksChange": true,
      "hooks": ARRAY [
        1,
      ],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
  },
  "fiberSelfDurations": Map {
    4 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "Component",
      "hocDisplayNames": null,
      "id": 4,
      "key": null,
      "identifierDescription": 5,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 3 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": false,
      "didHooksChange": true,
      "hooks": ARRAY [
        0,
      ],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
  },
  "fiberSelfDurations": Map {
    4 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "Component",
      "hocDisplayNames": null,
      "id": 4,
      "key": null,
      "identifierDescription": 5,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 4 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": true,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: CommitDetails commitIndex: 5 1`] = `
OBJECT {
  "changeDescriptions": Map {
    4 => OBJECT {
      "context": true,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    4 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should properly detect changed hooks: imported data 1`] = `
OBJECT {
  "dataForRoots": ARRAY [
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": 0,
          "fiberActualDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
          ],
          "passiveEffectDuration": 0,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": true,
                "hooks": ARRAY [
                  1,
                ],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "Component",
              "hocDisplayNames": null,
              "id": 4,
              "key": null,
              "identifierDescription": 5,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": true,
                "hooks": ARRAY [
                  0,
                ],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "Component",
              "hocDisplayNames": null,
              "id": 4,
              "key": null,
              "identifierDescription": 5,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": true,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              4,
              OBJECT {
                "context": true,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "Component",
      "initialTreeBaseDurations": ARRAY [],
      "operations": ARRAY [
        ARRAY [
          1,
          1,
          27,
          16,
          67,
          111,
          110,
          116,
          101,
          120,
          116,
          46,
          80,
          114,
          111,
          118,
          105,
          100,
          101,
          114,
          9,
          67,
          111,
          109,
          112,
          111,
          110,
          101,
          110,
          116,
          1,
          1,
          11,
          0,
          1,
          1,
          1,
          1,
          2,
          2,
          1,
          0,
          1,
          0,
          4,
          2,
          0,
          1,
          3,
          2,
          2,
          0,
          1,
          0,
          4,
          3,
          0,
          1,
          4,
          5,
          3,
          0,
          2,
          0,
          4,
          4,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
      ],
      "rootID": 1,
      "snapshots": ARRAY [],
    },
  ],
  "version": 5,
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: CommitDetails commitIndex: 0 1`] = `
OBJECT {
  "changeDescriptions": Map {
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    4 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    6 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "isFirstMount": true,
      "props": null,
      "state": null,
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    1 => 0,
    2 => 0,
    3 => 0,
    4 => 0,
    5 => 0,
    6 => 0,
    7 => 0,
  },
  "fiberSelfDurations": Map {
    1 => 0,
    2 => 0,
    3 => 0,
    4 => 0,
    5 => 0,
    6 => 0,
    7 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: CommitDetails commitIndex: 1 1`] = `
OBJECT {
  "changeDescriptions": Map {
    5 => OBJECT {
      "context": null,
      "didHooksChange": true,
      "hooks": ARRAY [
        0,
      ],
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
    4 => OBJECT {
      "context": true,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": true,
      "hooks": ARRAY [
        0,
      ],
      "isFirstMount": false,
      "props": ARRAY [
        "count",
      ],
      "state": null,
    },
    6 => OBJECT {
      "context": ARRAY [
        "count",
      ],
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": ARRAY [
        "count",
      ],
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
  },
  "fiberSelfDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "LegacyContextProvider",
      "hocDisplayNames": null,
      "id": 2,
      "key": null,
      "identifierDescription": 1,
    },
  ],
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: CommitDetails commitIndex: 2 1`] = `
OBJECT {
  "changeDescriptions": Map {
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    4 => OBJECT {
      "context": false,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    6 => OBJECT {
      "context": ARRAY [],
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [
        "foo",
      ],
      "state": ARRAY [],
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: CommitDetails commitIndex: 3 1`] = `
OBJECT {
  "changeDescriptions": Map {
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    4 => OBJECT {
      "context": false,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    6 => OBJECT {
      "context": ARRAY [],
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [
        "foo",
        "bar",
      ],
      "state": ARRAY [],
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: CommitDetails commitIndex: 4 1`] = `
OBJECT {
  "changeDescriptions": Map {
    5 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    4 => OBJECT {
      "context": false,
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    7 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    6 => OBJECT {
      "context": ARRAY [],
      "didHooksChange": false,
      "hooks": null,
      "isFirstMount": false,
      "props": ARRAY [],
      "state": null,
    },
    2 => OBJECT {
      "context": null,
      "didHooksChange": false,
      "hooks": ARRAY [],
      "isFirstMount": false,
      "props": ARRAY [
        "bar",
      ],
      "state": ARRAY [],
    },
  },
  "duration": 0,
  "effectDuration": null,
  "fiberActualDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "fiberSelfDurations": Map {
    5 => 0,
    4 => 0,
    7 => 0,
    6 => 0,
    3 => 0,
    2 => 0,
    1 => 0,
  },
  "passiveEffectDuration": null,
  "priorityLevel": "Immediate",
  "timestamp": 0,
  "updaters": ARRAY [
    OBJECT {
      "displayName": "render()",
      "hocDisplayNames": null,
      "id": 1,
      "key": null,
      "identifierDescription": 11,
    },
  ],
}
`;

exports[`ProfilingCache should record changed props/state/context/hooks: imported data 1`] = `
OBJECT {
  "dataForRoots": ARRAY [
    OBJECT {
      "commitData": ARRAY [
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "isFirstMount": true,
                "props": null,
                "state": null,
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              1,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": true,
                "hooks": ARRAY [
                  0,
                ],
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": true,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": true,
                "hooks": ARRAY [
                  0,
                ],
                "isFirstMount": false,
                "props": ARRAY [
                  "count",
                ],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": ARRAY [
                  "count",
                ],
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": ARRAY [
                  "count",
                ],
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "LegacyContextProvider",
              "hocDisplayNames": null,
              "id": 2,
              "key": null,
              "identifierDescription": 1,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": ARRAY [],
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [
                  "foo",
                ],
                "state": ARRAY [],
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": ARRAY [],
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [
                  "foo",
                  "bar",
                ],
                "state": ARRAY [],
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
        OBJECT {
          "changeDescriptions": ARRAY [
            ARRAY [
              5,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              4,
              OBJECT {
                "context": false,
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              7,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              6,
              OBJECT {
                "context": ARRAY [],
                "didHooksChange": false,
                "hooks": null,
                "isFirstMount": false,
                "props": ARRAY [],
                "state": null,
              },
            ],
            ARRAY [
              2,
              OBJECT {
                "context": null,
                "didHooksChange": false,
                "hooks": ARRAY [],
                "isFirstMount": false,
                "props": ARRAY [
                  "bar",
                ],
                "state": ARRAY [],
              },
            ],
          ],
          "duration": 0,
          "effectDuration": null,
          "fiberActualDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "fiberSelfDurations": ARRAY [
            ARRAY [
              5,
              0,
            ],
            ARRAY [
              4,
              0,
            ],
            ARRAY [
              7,
              0,
            ],
            ARRAY [
              6,
              0,
            ],
            ARRAY [
              3,
              0,
            ],
            ARRAY [
              2,
              0,
            ],
            ARRAY [
              1,
              0,
            ],
          ],
          "passiveEffectDuration": null,
          "priorityLevel": "Immediate",
          "timestamp": 0,
          "updaters": ARRAY [
            OBJECT {
              "displayName": "render()",
              "hocDisplayNames": null,
              "id": 1,
              "key": null,
              "identifierDescription": 11,
            },
          ],
        },
      ],
      "displayName": "LegacyContextProvider",
      "initialTreeBaseDurations": ARRAY [],
      "operations": ARRAY [
        ARRAY [
          1,
          1,
          110,
          21,
          76,
          101,
          103,
          97,
          99,
          121,
          67,
          111,
          110,
          116,
          101,
          120,
          116,
          80,
          114,
          111,
          118,
          105,
          100,
          101,
          114,
          16,
          67,
          111,
          110,
          116,
          101,
          120,
          116,
          46,
          80,
          114,
          111,
          118,
          105,
          100,
          101,
          114,
          21,
          77,
          111,
          100,
          101,
          114,
          110,
          67,
          111,
          110,
          116,
          101,
          120,
          116,
          67,
          111,
          110,
          115,
          117,
          109,
          101,
          114,
          26,
          70,
          117,
          110,
          99,
          116,
          105,
          111,
          110,
          67,
          111,
          109,
          112,
          111,
          110,
          101,
          110,
          116,
          87,
          105,
          116,
          104,
          72,
          111,
          111,
          107,
          115,
          21,
          76,
          101,
          103,
          97,
          99,
          121,
          67,
          111,
          110,
          116,
          101,
          120,
          116,
          67,
          111,
          110,
          115,
          117,
          109,
          101,
          114,
          1,
          1,
          11,
          0,
          1,
          1,
          1,
          1,
          2,
          1,
          1,
          0,
          1,
          0,
          4,
          2,
          0,
          1,
          3,
          2,
          2,
          2,
          2,
          0,
          4,
          3,
          0,
          1,
          4,
          1,
          3,
          2,
          3,
          0,
          4,
          4,
          0,
          1,
          5,
          5,
          4,
          4,
          4,
          0,
          4,
          5,
          0,
          1,
          6,
          1,
          3,
          2,
          5,
          0,
          4,
          6,
          0,
          1,
          7,
          5,
          6,
          6,
          4,
          0,
          4,
          7,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
        ARRAY [
          1,
          1,
          0,
        ],
      ],
      "rootID": 1,
      "snapshots": ARRAY [],
    },
  ],
  "version": 5,
}
`;
